--- a/src/app/components/layout-components/global-message/global-message.component.html
+++ b/src/app/components/layout-components/global-message/global-message.component.html
@@ -32,9 +32,11 @@
       </div>
 
       <div>
-        <h2 class="alert-header">
-          {{ globalMessageService.isError ? 'Error' : globalMessageService.isWarning ? 'Warning' : 'Success' }}
-        </h2>
+        <ng-container *transloco="let t">
+          <h2 class="alert-header">
+            {{ globalMessageService.isError ? t('errors.error') : globalMessageService.isWarning ? t('errors.warning') : t('responses.success') }}
+          </h2>
+        </ng-container>
         <p class="alert-message" [innerHTML]="message"></p>
       </div>
     </div>
