--- a/src/app/pages/dashboard/articles/articles.component.html
+++ b/src/app/pages/dashboard/articles/articles.component.html
@@ -16,17 +16,27 @@
         class="article-wrapper"
         *ngFor="let article of articles"
       >
-        <h1>{{ article.articleName }}</h1>
-        <h3>{{ article.articleDescription }}</h3>
-        <br>
-        <p>{{ t('articles.articleCreatedAt', { createdAt: dayjs(article.createdAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
-        <p>{{ t('articles.articleUpdatedAt', { updatedAt: dayjs(article.updatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
-        <p>{{ t('articles.articleLanguage', { articleLanguage: article.articleLanguage.toUpperCase() }) }}</p>
-        <p>{{ t('articles.articleCategory', { categoryName: article.category.categoryName }) }}</p>
+        <div class="article-info-container">
+          <div>
+            <h1>{{ article.articleName }}</h1>
+            <h3>{{ article.articleDescription }}</h3>
+            <br>
+            <p>{{ t('articles.articleCreatedAt', { createdAt: dayjs(article.createdAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p>{{ t('articles.articleUpdatedAt', { updatedAt: dayjs(article.updatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p>{{ t('articles.articleLanguage', { articleLanguage: article.articleLanguage.toUpperCase() }) }}</p>
+            <p>{{ t('articles.articleCategory', { categoryName: article.category.categoryName }) }}</p>
 
-        <div class="article-tags-wrapper">
-          <div *ngFor="let articleTag of article.articleTags">
-            <p class="article-tag">{{ articleTag }}</p>
+            <div class="article-tags-wrapper">
+              <div *ngFor="let articleTag of article.articleTags">
+                <p class="article-tag">{{ articleTag }}</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img
+              [src]="staticStorage + article.articleImage"
+              alt="article-picture"
+            >
           </div>
         </div>
 
