--- a/src/app/pages/dashboard/articles/articles.component.html
+++ b/src/app/pages/dashboard/articles/articles.component.html
@@ -34,6 +34,7 @@
           </div>
           <div>
             <img
+              class="article-picture-preview"
               [src]="staticStorage + article.articleImage"
               alt="article-picture"
             >
