--- a/src/app/components/layout-components/header/header.component.html
+++ b/src/app/components/layout-components/header/header.component.html
@@ -14,7 +14,7 @@
         <h3
           class="sidebar-header"
           *ngIf="!showHeaderBurger"
-        >MBPB</h3>
+        >Bahdashych on Security</h3>
       </div>
 
       <div class="header-side" *ngIf="isUserLoggedIn">
