--- a/src/app/layouts/credentials/credentials.layout.html
+++ b/src/app/layouts/credentials/credentials.layout.html
@@ -12,13 +12,13 @@
         </div>
       </div>
       <h3 class="login-header-title">
-        MBPB
+        Bahdashych on Security
       </h3>
     </div>
 
     <div class="credentials-header" *ngIf="!mirroredHeader">
       <h3 class="login-header-title">
-        MBPB
+        Bahdashych on Security
       </h3>
       <div>
         <div class="login-header-button" *ngIf="headerLink === 'login'">
