--- a/src/app/pages/credentials/reset-password/reset-password.component.html
+++ b/src/app/pages/credentials/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
 >
   <ng-container *transloco="let t">
     <div class="welcome-title" [@fadeInOut]="true">
-      <h1 class="main-title">MBPB</h1>
+      <h1 class="main-title">Bahdashych on Security</h1>
       <h2 class="second-title flex">
         <span>{{ t('res-pass.resetPass') }}&nbsp;</span>
         <basic-emoji emoji="optical-disk.png" [width]="48" [height]="48"/>
