--- a/src/app/components/layout-components/footer/footer.component.html
+++ b/src/app/components/layout-components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
   <div class="footer-container">
-    <h3 class="footer-title">MBPB</h3>
+    <h3 class="footer-title">Bahdashych on Security</h3>
   </div>
 </footer>
