--- a/src/app/pages/credentials/forgot-password/forgot-password.component.html
+++ b/src/app/pages/credentials/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
 >
   <ng-container *transloco="let t">
     <div class="welcome-title" [@fadeInOut]="true">
-      <h1 class="main-title">MBPB</h1>
+      <h1 class="main-title">Bahdashych on Security</h1>
       <h2 class="second-title flex">
         <span>{{ t('forg-pass.forgotPassword') }}&nbsp;</span>
         <basic-emoji emoji="gear.png" [width]="42" [height]="42"/>
