--- a/src/app/pages/dashboard/create-author/create-author.component.html
+++ b/src/app/pages/dashboard/create-author/create-author.component.html
@@ -20,9 +20,9 @@
         (valueChange)="lastName = $event"
       />
       <basic-input
-        [label]="t('input.authorDescNameLabel')"
-        [placeholder]="t('input.authorDescNamePlaceholder')"
-        [inputDescription]="t('input.authorDescNameDesc')"
+        [label]="t('input.authorDescLabel')"
+        [placeholder]="t('input.authorDescPlaceholder')"
+        [inputDescription]="t('input.authorDescDesc')"
         [value]="description"
         (valueChange)="description = $event"
       />
