--- a/src/app/pages/dashboard/create-certification/create-certification.component.scss
+++ b/src/app/pages/dashboard/create-certification/create-certification.component.scss
@@ -69,3 +69,18 @@
   width: 400px;
   height: 500px;
 }
+
+.authors-list {
+  margin-bottom: 20px;
+}
+
+.author-item {
+  border: 1px solid var(--border-color);
+  transition: .2s;
+  cursor: pointer;
+  padding: 6px;
+
+  &:hover {
+    background: var(--color-hover);
+  }
+}
