--- a/src/app/pages/dashboard/certifications/certifications.component.html
+++ b/src/app/pages/dashboard/certifications/certifications.component.html
@@ -1,1 +1,77 @@
-<p>certifications works!</p>
+<layout-default
+  [userInfo]="userInfo"
+>
+  <ng-container *transloco="let t">
+    <div class="certifications-wrapper">
+      <h1>{{ t('certs.allCertifications') }}</h1>
+      <basic-input
+        [label]="t('input.certQueryLabel')"
+        [placeholder]="t('input.certQueryPlaceholder')"
+        [inputDescription]="t('input.certQueryDesc')"
+        [value]="certificationSearchQuery"
+        (valueChange)="handeCertificationsQuery($event)"
+      />
+
+      <div
+        class="certification-wrapper"
+        *ngFor="let cert of certifications"
+      >
+        <div class="certification-info-container">
+          <div class="certification-info-text-fields">
+            <h2>{{ cert.certName }}</h2>
+            <p>{{ cert.certDescription }}</p>
+            <p class="certification-date">{{ t('certs.certObtainingDate', { certObtainingDate: dayjs(cert.obtainingDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="certification-date">{{ t('certs.certExpirationDate', { certExpirationDate: dayjs(cert.expirationDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="certification-date">{{ t('certs.certCreatedAt', { certCreatedAt: dayjs(cert.createdAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="certification-date">{{ t('certs.certUpdatedAt', { certUpdatedAt: dayjs(cert.updatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+          </div>
+          <div>
+            <img
+              class="cert-picture-preview"
+              [src]="staticStorage + cert.certPicture"
+              alt=""
+            >
+          </div>
+        </div>
+        <div class="certification-control-buttons">
+          <div class="certification-control-button-wrapper">
+            <basic-button
+              [label]="t('button.editCert')"
+              (buttonClick)="handleRedirect('/account/certification/' + cert.id)"
+            />
+          </div>
+          <div class="certification-control-button-wrapper margin">
+            <basic-button
+              [label]="t('button.changeCertSelection')"
+              [fillButton]="cert.isSelected"
+              (buttonClick)="changeCertificationSelectionStatus(cert.id)"
+            />
+          </div>
+          <div class="certification-control-button-wrapper">
+            <basic-button
+              [label]="t('button.deleteCert')"
+              [danger]="true"
+              (buttonClick)="deleteCertification(cert.id)"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div *ngIf="certifications.length === 0">
+        <h1>{{ t('certs.noCerts') }}</h1>
+      </div>
+
+      <div class="pagination-container">
+        <basic-pagination
+          [itemsPerPageLabel]="t('dropdown.certsPerPage')"
+          [currentPage]="page"
+          [itemsPerPage]="pageSize"
+          [totalItems]="totalItems"
+          (setCurrentPage)="setCurrentPage($event)"
+          (setItemsPerPage)="setArticlesPerPage($event)"
+          (fetchItems)="listCertifications()"
+        />
+      </div>
+    </div>
+  </ng-container>
+</layout-default>
