--- a/src/app/pages/dashboard/certifications/certifications.component.html
+++ b/src/app/pages/dashboard/certifications/certifications.component.html
@@ -18,7 +18,7 @@
       >
         <div class="certification-info-container">
           <div class="certification-info-text-fields">
-            <h2>{{ cert.certName }}</h2>
+            <h2 class="certification-info-title">{{ cert.certName }}</h2>
             <p>{{ cert.certDescription }}</p>
             <p class="certification-date">{{ t('certs.certObtainingDate', { certObtainingDate: dayjs(cert.obtainingDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
             <p class="certification-date">{{ t('certs.certExpirationDate', { certExpirationDate: dayjs(cert.expirationDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
